--- a/vsem_calibration_tests/IVAR_exploration.Rmd
+++ b/vsem_calibration_tests/IVAR_exploration.Rmd
@@ -285,8 +285,12 @@ lines(prior_grid_info$inputs, post_cond_log_var_2, col = "green")
 
 ```{r}
 
+#
+# Numerical validation. 
+#
+
 # Choose integration point u and candidate point u_tilde to investigate (both scaled).
-u <- scale_input_data(matrix(0.5, nrow = 1), input_bounds = lpost_emulator_no_scale$design_info_list$input_bounds)
+u <- scale_input_data(matrix(-0.5, nrow = 1), input_bounds = lpost_emulator_no_scale$design_info_list$input_bounds)
 u_tilde <- prior_grid_info$inputs_scaled[600,,drop=FALSE] # 999
 
 # Unconditioned log variance. 
@@ -296,15 +300,25 @@ un_log_var <- convert_to_post_emulator_log_moments(lpost_emulator_no_scale, un_l
 # Closed-form log expected conditional variance. 
 cond_log_var <- get_IVAR_post_vars(u_tilde, lpost_emulator_no_scale, u, verbose = TRUE) 
 
+# New closed-form derivation of log expected conditional variance. 
+lpost_emulator_no_scale_cond <- update_lpost_emulator(lpost_emulator_no_scale, inputs_new_scaled = u_tilde)
+cond_lpost_pred <- predict_lpost_emulator(u, lpost_emulator_no_scale_cond, uncenter = FALSE)
+log_var_KB <- convert_to_post_emulator_log_moments(lpost_emulator_no_scale_cond, cond_lpost_pred$mean, cond_lpost_pred$var, return_vals = "log_var")$log_var
+un_lpost_pred_tilde <- predict_lpost_emulator(u_tilde, lpost_emulator_no_scale, return_vals = c("mean", "var", "cov"), 
+                                              inputs_new_scaled_2 = u, uncenter = FALSE)
+
+log_uncertainty_inflation_term <- 2 * drop(un_lpost_pred_tilde$cov)^2 / un_lpost_pred_tilde$var
+cond_log_var_new_calc <- log_var_KB + log_uncertainty_inflation_term
+
 # Monte Carlo Approximation of log expected conditional variance (i.e., estimate expected conditional variance, then take log of result). 
 lpost_tilde_pred <- predict_lpost_emulator(u_tilde, lpost_emulator_no_scale, uncenter = FALSE)
 log_pi_tilde_pred <- convert_to_post_emulator_log_moments(lpost_emulator_no_scale, lpost_tilde_pred$mean, lpost_tilde_pred$var)
-N_MC_test <- 10000
+N_MC_test <- 100000
 lpost_tilde_samp <- rnorm(N_MC_test, lpost_tilde_pred$mean, sqrt(lpost_tilde_pred$var))
 
 # Condition lpost emulator.  
-lpost_emulator_no_scale_cond <- update_lpost_emulator(lpost_emulator_no_scale, inputs_new_scaled = u_tilde)
-np1 <- length(lpost_emulator_no_scale_cond$outputs_lpost)
+lpost_emulator_no_scale_cond_MC <- update_lpost_emulator(lpost_emulator_no_scale, inputs_new_scaled = u_tilde)
+np1 <- length(lpost_emulator_no_scale_cond_MC$outputs_lpost)
 
 cond_lpost_mean_samp <- vector(mode = "numeric", length = N_MC_test)
 cond_lpost_var_samp <- vector(mode = "numeric", length = N_MC_test)
@@ -312,20 +326,21 @@ cond_lpost_var_samp <- vector(mode = "numeric", length = N_MC_test)
 for(j in seq_len(N_MC_test)) {
   
   # Update response. 
-  lpost_emulator_no_scale_cond$outputs_lpost[np1] <- lpost_tilde_samp[j]
+  lpost_emulator_no_scale_cond_MC$outputs_lpost[np1] <- lpost_tilde_samp[j]
   
   # Compute conditioned variance. 
-  results <- predict_lpost_emulator(u, lpost_emulator_no_scale_cond, uncenter = FALSE)
+  results <- predict_lpost_emulator(u, lpost_emulator_no_scale_cond_MC, uncenter = FALSE)
   cond_lpost_mean_samp[j] <- results$mean
   cond_lpost_var_samp[j] <- results$var # Note: this should be constant for all j, since pred var not function of response. 
   
 }
 
-cond_log_var_MC_samp <- convert_to_post_emulator_log_moments(lpost_emulator_no_scale_cond, cond_lpost_mean_samp, cond_lpost_var_samp)
+cond_log_var_MC_samp <- convert_to_post_emulator_log_moments(lpost_emulator_no_scale_cond_MC, cond_lpost_mean_samp, cond_lpost_var_samp)
 cond_log_var_MC <- logSumExp(cond_log_var_MC_samp$log_var) - log(N_MC_test)
 
 print(paste0("Log unconditioned post var: ", un_log_var))
 print(paste0("Log Expected conditional post var (closed-form): ", cond_log_var))
+print(paste0("Log Expected conditional post var (closed-form new calculation): ", cond_log_var_new_calc))
 print(paste0("Log Expected conditional post var (MC Estimate): ", cond_log_var_MC))
 
 range(cond_log_var_MC_samp$log_var) # Entire range is less than un_log_var, as it should be. 
@@ -337,6 +352,34 @@ range(cond_log_var_MC_samp$log_var) # Entire range is less than un_log_var, as i
 
 
 ```
+
+
+```{r}
+# Testing predictive covariance code. 
+# TODO: add this to more structured validation code. 
+pred1 <- predict_lpost_GP_approx(theta_vals_scaled = u, emulator_info_list = lpost_emulator_no_scale$emulator_info_list, 
+                                 sig2_eps = lpost_emulator_no_scale$sig2_eps, theta_prior_params = theta_prior_params, 
+                                 N_obs = computer_model_data$n_obs, theta_vals_scaled_2 = u_tilde, return_vals = c("mean", "var", "cov"))
+
+pred2 <- predict_lpost_emulator(inputs_new_scaled = u, lpost_emulator = lpost_emulator_no_scale, return_vals = c("mean", "var", "cov"), 
+                                inputs_new_scaled_2 = u_tilde, uncenter = TRUE)
+
+print("Means")
+print(paste0("predict_lpost_GP_approx: ", pred1$mean))
+print(paste0("predict_lpost_emulator: ", pred2$mean))
+
+print("Vars")
+print(paste0("predict_lpost_GP_approx: ", pred1$var))
+print(paste0("predict_lpost_emulator: ", pred2$var))
+
+print("Cov")
+print(paste0("predict_lpost_GP_approx: ", pred1$cov))
+print(paste0("predict_lpost_emulator: ", pred2$cov))
+
+```
+
+
+
 
 
 
