--- a/vsem_calibration_tests/IVAR_exploration.Rmd
+++ b/vsem_calibration_tests/IVAR_exploration.Rmd
@@ -133,15 +133,10 @@ lpost_emulator <- get_lpost_emulator_obj(emulator_info_list = emulator_info_list
                                          computer_model_data = computer_model_data, sig2_eps = sig2_eps, 
                                          theta_prior_params = theta_prior_params, center_output = TRUE, scale_output = TRUE)
 
-# TODO: TEMP, Emulator that centers but does not scale response. Temporarily keep this until I clean up transforamtion code. 
-lpost_emulator_no_scale <- get_lpost_emulator_obj(emulator_info_list = emulator_info_list, design_info_list = init_design_info, 
-                                                  computer_model_data = computer_model_data, sig2_eps = sig2_eps, 
-                                                  theta_prior_params = theta_prior_params, center_output = TRUE, scale_output = FALSE)
-
 # Plot initial emulator fit.
 pred_grid_init_design <- predict_lpost_emulator(inputs_new_scaled = prior_grid_info$inputs_scaled, lpost_emulator = lpost_emulator)
-upper_CI <- pred_grid_init_design$mean + 2*sqrt(pred_grid_init_design$var)
-lower_CI <- pred_grid_init_design$mean - 2*sqrt(pred_grid_init_design$var)
+upper_CI <- qnorm(.99, pred_grid_init_design$mean, sqrt(pred_grid_init_design$var))
+lower_CI <- qnorm(.01, pred_grid_init_design$mean, sqrt(pred_grid_init_design$var)) 
 
 plot(prior_grid_info$inputs, prior_grid_info$lpost, col = "red", type = "l", ylim = c(min(lower_CI), max(upper_CI)),
      main = "lpost Initial GP Fit", xlab = "u", ylab = "Unnormalized log posterior")
@@ -154,8 +149,6 @@ lines(prior_grid_info$inputs, pred_grid_init_design$mean - 2*sqrt(pred_grid_init
 
 ```{r}
 # Round 0 approximate posterior sampling. 
-
-
 N_mcmc_approx <- 50000
 
 mcmc_approx_round0 <- mcmc_calibrate_ind_GP(computer_model_data = computer_model_data, 
@@ -188,6 +181,31 @@ round0_hist_plot <- get_hist_plot(list(samp_exact, samp_approx_hist), bins = 50,
 plot(round0_hist_plot)
 
 ```
+```{r}
+# TEST: conditioning GP on a new design point (not re-fitting hyperparameters). 
+
+new_design_point_info <- list(inputs=matrix(-0.5))
+new_design_point_info$inputs_scaled <- scale_input_data(new_design_point_info$inputs, input_bounds=init_design_info$input_bounds)
+new_design_point_info$outputs <- 
+
+
+init_design_info <- get_input_output_design(N_points = design_settings$N_design,
+                                            design_method = design_settings$design_method, 
+                                            scale_inputs = TRUE,
+                                            computer_model_data = computer_model_data, 
+                                            theta_prior_params = theta_prior_params)
+init_design_info$lpost <- calc_lpost_theta_product_lik(computer_model_data = computer_model_data, 
+                                                       theta_vals = init_design_info$inputs, 
+                                                       vars_obs = diag(computer_model_data$Sig_eps), 
+                                                       SSR = init_design_info$outputs,
+                                                       na.rm = TRUE, theta_prior_params = theta_prior_params, 
+                                                       return_list = FALSE)
+
+
+```
+
+
+
 
 # Single Point IVAR Acqusitions
 
